correction complète des composants Collapse, About et Logement

--- a/src/components/Collapse.css
+++ b/src/components/Collapse.css
@@ -1,40 +1,34 @@
-
 .collapse {
-
-display: flex;
-
-width: 1440px;
-flex-direction: column;
-align-items: center;
-gap: 20px;
-background: #FFF;
-margin: auto;
-padding-top: 20px;
-
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 5px;
+  overflow: hidden;
 }
+
 .collapse-button {
- display: flex;
- justify-content: space-between;
-width: 1023px;
-height: 34px;
-padding: 10px 20px 10px 15px;
-align-items: center;
-border-radius: 5px;
-background: var(--Red, #FF6060);
-color: #FFF;
-font-family: Montserrat;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-font-size: 24px;
-font-style: normal;
-font-weight: 700;
-line-height: 142.6%; 
+  padding: 10px 20px 10px 15px;
 
+  background: #ff6060;
+  color: white;
+
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: 700;
+
+  cursor: pointer;
 }
+
 .collapse-content {
   padding: 15px;
+
   background: white;
   color: black;
-  width: 956px;
+
   font-size: 24px;
   font-weight: 500;
   line-height: 1.5;
